READ ONLY: Daily import from FFMPEG git
git-svn-id: https://xuggle-ffmpeg.googlecode.com/svn/trunk@927 9f8918ac-6a95-11de-be4f-b1b98ff093f4

--- a/ffmpeg/csrc/Changelog
+++ b/ffmpeg/csrc/Changelog
@@ -10,6 +10,8 @@ version <next>:
 - libxvid aspect pickiness fixed
 - Frame multithreaded decoding
 - Lots of deprecated API cruft removed
+- fft and imdct optimizations for AVX (Sandy Bridge) processors
+- showinfo filter added
 
 
 version 0.7_beta1:
