READ ONLY: Daily import from FFMPEG git
git-svn-id: https://xuggle-ffmpeg.googlecode.com/svn/trunk@951 9f8918ac-6a95-11de-be4f-b1b98ff093f4

--- a/ffmpeg/csrc/doc/ffprobe.texi
+++ b/ffmpeg/csrc/doc/ffprobe.texi
@@ -111,8 +111,8 @@ with name "STREAM".
 @end table
 @c man end
 
+@include decoders.texi
 @include demuxers.texi
-@include muxers.texi
 @include protocols.texi
 @include indevs.texi
 
