--- a/ffmpeg/csrc/doc/ffmpeg.texi
+++ b/ffmpeg/csrc/doc/ffmpeg.texi
@@ -312,13 +312,6 @@ the input video.
 Use the option "-filters" to show all the available filters (including
 also sources and sinks).
 
-@item -x264opts @var{option}
-Allows you to set any x264 option, see x264 manual for a list.
-@example
-ffmpeg -i foo.mpg -vcodec libx264 -x264opts keyint=123:min-keyint=20 -an out.mkv
-@end example
-
-
 @end table
 
 @section Advanced Video Options
@@ -1052,6 +1045,7 @@ file to which you want to add them.
 @c man end EXAMPLES
 
 @include eval.texi
+@include decoders.texi
 @include encoders.texi
 @include demuxers.texi
 @include muxers.texi
